Added security headers

--- a/nginx/conf.d/utf9k.net.conf
+++ b/nginx/conf.d/utf9k.net.conf
@@ -29,6 +29,13 @@ server {
     }
 
     add_header                Strict-Transport-Security "max-age=31536000" always;
+    add_header                X-Content-Type-Options "nosniff" always;
+    add_header                X-Xss-Protection "1; mode=block" always;
+    add_header                Referrer-Policy same-origin;
+    add_header                X-Frame-Options "SAMEORIGIN" always;
+    add_header                Content-Security-Policy "default-src 'self'; style-src unpkg.com use.fontawesome.com fonts.googleapis.com";
+
+    server_tokens             off;
 
     ssl_session_cache         shared:SSL:20m;
     ssl_session_timeout       10m;
@@ -43,6 +50,8 @@ server {
     ssl_certificate           /etc/letsencrypt/live/utf9k.net/fullchain.pem;
     ssl_certificate_key       /etc/letsencrypt/live/utf9k.net/privkey.pem;
     ssl_trusted_certificate   /etc/letsencrypt/live/utf9k.net/chain.pem;
+
+    resolver                  8.8.8.8 8.8.4.4;
 
     access_log                /dev/stdout;
     error_log                 /dev/stderr info;
