--- a/nginx/conf.d/utf9k.net.conf
+++ b/nginx/conf.d/utf9k.net.conf
@@ -33,7 +33,7 @@ server {
     add_header                X-Xss-Protection "1; mode=block" always;
     add_header                Referrer-Policy same-origin;
     add_header                X-Frame-Options "SAMEORIGIN" always;
-    add_header                Content-Security-Policy "default-src 'self'; style-src unpkg.com use.fontawesome.com fonts.googleapis.com";
+    add_header                Content-Security-Policy "default-src 'self'; style-src 'self' unpkg.com use.fontawesome.com fonts.googleapis.com; font-src use.fontawesome.com fonts.gstatic.com";
 
     server_tokens             off;
 
