Added rewriting for www -> non-www

--- a/nginx/conf.d/utf9k.net.conf
+++ b/nginx/conf.d/utf9k.net.conf
@@ -1,10 +1,17 @@
 server {
     listen      80;
     listen [::]:80;
-    server_name utf9k.net www.utf9k.net;
+    server_name www.utf9k.net;
+    return      301          $scheme://utf9k.net$request_uri;
+}
+
+server {
+    listen      80;
+    listen [::]:80;
+    server_name utf9k.net;
 
     location / {
-        rewrite ^ https://$host$request_uri? permanent;
+        rewrite ^ https://$host$request_uri;
     }
 
     location ^~ /.well-known {
@@ -16,7 +23,17 @@ server {
 server {
     listen      443           ssl http2;
     listen [::]:443           ssl http2;
-    server_name               utf9k.net www.utf9k.net;
+    server_name               www.utf9k.net;
+    ssl_certificate           /etc/letsencrypt/live/utf9k.net/fullchain.pem;
+    ssl_certificate_key       /etc/letsencrypt/live/utf9k.net/privkey.pem;
+    ssl_trusted_certificate   /etc/letsencrypt/live/utf9k.net/chain.pem;
+    return      301           $scheme://utf9k.net$request_uri;      
+}
+
+server {
+    listen      443           ssl http2;
+    listen [::]:443           ssl http2;
+    server_name               utf9k.net;
 
     location / {
         proxy_set_header      Host                 $host;
