Footer is now able to fetch the latest site commit which is neat

--- a/nginx/conf.d/utf9k.net.conf
+++ b/nginx/conf.d/utf9k.net.conf
@@ -50,7 +50,7 @@ server {
     add_header                X-Xss-Protection "1; mode=block" always;
     add_header                Referrer-Policy same-origin;
     add_header                X-Frame-Options "SAMEORIGIN" always;
-    add_header                Content-Security-Policy "default-src 'self'; style-src 'self' unpkg.com use.fontawesome.com fonts.googleapis.com 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-sa1H6w5rBgVQQhXcSCje9eWcJI9w9vCZHskE0UJ3l88='; script-src unpkg.com 'sha256-mJF38xB5ZWbQWiKrwEvphvcFzccuXP9I14MOUWSIIpM='; font-src use.fontawesome.com fonts.gstatic.com";
+    add_header                Content-Security-Policy "default-src 'self'; style-src 'self' unpkg.com use.fontawesome.com fonts.googleapis.com 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-sa1H6w5rBgVQQhXcSCje9eWcJI9w9vCZHskE0UJ3l88='; script-src 'self' unpkg.com; font-src use.fontawesome.com fonts.gstatic.com; connect-src api.github.com";
 
     server_tokens             off;
 
