Added redirect for my old site

--- a/nginx/conf.d/utf9k.net.conf
+++ b/nginx/conf.d/utf9k.net.conf
@@ -1,6 +1,13 @@
 server {
     listen      80;
     listen [::]:80;
+    server_name thingsima.de www.thingsima.de;
+    return      301          https://utf9k.net$request_uri;
+}
+
+server {
+    listen      80;
+    listen [::]:80;
     server_name www.utf9k.net;
     return      301          $scheme://utf9k.net$request_uri;
 }
