--- a/nginx/conf.d/utf9k.net.conf
+++ b/nginx/conf.d/utf9k.net.conf
@@ -57,7 +57,7 @@ server {
     add_header                X-Xss-Protection "1; mode=block" always;
     add_header                Referrer-Policy same-origin;
     add_header                X-Frame-Options "SAMEORIGIN" always;
-    add_header                Content-Security-Policy "default-src 'self'; style-src 'self' unpkg.com use.fontawesome.com fonts.googleapis.com 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-sa1H6w5rBgVQQhXcSCje9eWcJI9w9vCZHskE0UJ3l88='; script-src 'self' unpkg.com; img-src image.tmdb.org lastfm-img2.akamaized.net https://www.giantbomb.com; font-src use.fontawesome.com fonts.gstatic.com; connect-src api.github.com";
+    add_header                Content-Security-Policy "default-src 'self'; style-src 'self' unpkg.com use.fontawesome.com fonts.googleapis.com 'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=' 'sha256-sa1H6w5rBgVQQhXcSCje9eWcJI9w9vCZHskE0UJ3l88='; script-src 'self' unpkg.com www.googletagmanager.com 'sha256-/NnoYm0YaWcEvF2FOQkgxDOn+T4s04ZzmJQdGdI5SDY='; img-src image.tmdb.org lastfm-img2.akamaized.net www.giantbomb.com; font-src use.fontawesome.com fonts.gstatic.com; connect-src api.github.com";
 
     server_tokens             off;
 
