--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-pygments = "*"
-mistune = "*"
-mistune-contrib = "*"
-pendulum = "*"
-gunicorn = "*"
-redis = "*"
-apscheduler = "*"
-requests = "*"
-"bs4" = "*"
+pelican = "*"
+markdown = "*"
 
 [dev-packages]
-pylint = "*"
 
 [requires]
 python_version = "3.7"
