--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,6 @@
 baseURL: https://utf9k.net
 languageCode: en-us
 title: utf9k
-Paginate: 3
 menu:
   main:
     - name: Projects
@@ -20,7 +19,8 @@ menu:
       url: /contact/
       weight: 5
 params:
-  - github: https://github.com/marcus-crane
-  - instagram: https://instagram.com/sentreh
-  - linkedin: https://linkedin.com/in/marcus-crane
-  - twitter: https://twitter.com/sentreh
+  author: Marcus Crane
+  github: https://github.com/marcus-crane
+  instagram: https://instagram.com/sentreh
+  linkedin: https://linkedin.com/in/marcus-crane
+  twitter: https://twitter.com/sentreh
