Added 404 page and added custom CSS/static files into site config

--- a/config.yaml
+++ b/config.yaml
@@ -19,3 +19,9 @@ menu:
       url: /contact/
       weight: 5
 pygmentsuseclasses: true
+params:
+  custom_css:
+    - /css/tailwind.min.css
+    - /css/style.css
+  static_includes:
+    - manifest.json
