Updated the front page and removed unused footer + js stuff

--- a/data/social.yaml
+++ b/data/social.yaml
@@ -1,4 +1,4 @@
-Github: https://github.com/marcus-crane
-Instagram: https://instagram.com/sentryism
-LinkedIn: https://linkedin.com/in/marcus-crane
-Twitter: https://twitter.com/sentreh
+github: https://github.com/marcus-crane
+instagram: https://instagram.com/sentryism
+linkedin: https://linkedin.com/in/marcus-crane
+twitter: https://twitter.com/sentreh
