--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ author: Marcus Crane <marcus@utf9k.net>
 plugins:
   - jekyll-feed
   - jekyll-asciidoc
+
+asciidoctor:
+  attributes:
+    - showtitle=@
