--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://utf9k.net/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "utf9k"
