Desktop menu is now dynamic and weighted

--- a/config.yaml
+++ b/config.yaml
@@ -14,12 +14,15 @@ menu:
   - identifier: about
     name: About
     url: /about
+    weight: 1
   - identifier: now
     name: Now
     url: /now
+    weight: 2
   - identifier: rss
     name: RSS
     url: /index.xml
+    weight: 100
 
 markup:
   goldmark:
