Use relative path for Hugo output

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,4 +41,4 @@ jobs:
           script: |
             rm -rf /var/www/html/utf9k
             mkdir -p /var/www/html/utf9k
-            cp -R public/* /var/www/html/utf9k/
+            cp -R ./public /var/www/html/utf9k/
