--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,6 +38,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          source: "public/."
+          source: "public"
           target: "/var/www/html/utf9k"
           rm: true
+          strip_components: 1
