--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,3 +42,15 @@ jobs:
           target: "/var/www/html/utf9k"
           rm: true
           strip_components: 1
+
+      - name: Apply any nginx changes
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          source: "conf/nginx/utf9k.net"
+          target: "/etc/nginx/sites-available/utf9k.net"
+          rm: true
+          strip_components: 1
