--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,21 @@
 # The URL the site will be built for
-base_url = "https://utf9k.net"
+base_url = "utf9k.net"
+
+title = "utf9k"
 
 # Whether to automatically compile all Sass files in the sass directory
-compile_sass = true
+compile_sass = false
 
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+highlight_theme = "dracula"
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
+
+generate_feed = true
 
 [extra]
 # Put all your custom variables here
