Add yarn install to build step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,14 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+      
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+          
+      - name: Install CSS preprocessor
+        run: yarn install
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
