--- a/netlify.toml
+++ b/netlify.toml
@@ -47,3 +47,15 @@ X-XSS-Protection = "1; mode=block"
 X-Content-Type-Options = "nosniff"
 Referrer-Policy = "no-referrer"
 Content-Security-Policy = "script-src 'self' 'unsafe-inline'"
+
+[[plugins]]
+package = "netlify-plugin-checklinks"
+
+  [plugins.inputs]
+  entryPoints = [
+    "*.html",
+  ]
+
+  skipPatterns = []
+
+  checkExternal = true
