Add a11y netlify plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -57,3 +57,10 @@ package = "netlify-plugin-checklinks"
   ]
 
   skipPatterns = []
+
+[[plugins]]
+package = "netlify-plugin-a11y"
+
+  [plugins.inputs]
+
+  checkPaths = ['/']
