--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,18 @@ for = "/*.png"
 Cache-Control = "public, max-age=604800"
 
 [[headers]]
+for = "/*.png"
+
+[headers.values]
+Cache-Control = "public, max-age=604800"
+
+[[headers]]
+for = "/*.mp4"
+
+[headers.values]
+Cache-Control = "public, max-age=604800"
+
+[[headers]]
 for = "/*.css"
 
 [headers.values]
