--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:marcus-crane/utf9k",
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
+  "scripts": {
+    "start": "hugo server --disableFastRender --buildDrafts --buildFuture"
+  },
   "devDependencies": {
     "autoprefixer": "^10.1.0",
     "postcss": "^8.2.2",
