--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,10 @@ baseURL = "https://utf9k.net/"
 languageCode = "en-us"
 title = "utf9k"
 
+[params]
+  description = "Is this thing even on? I just put some text here to test out link previews. There's real site content though, I swear!"
+  title = "utf9k"
+
 [outputs]
   home = ["HTML", "RSS"]
 
