Set up next branch to view drafts

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,9 @@ HUGO_VERSION = "0.78.2"
 [context.production.environment]
 HUGO_ENV = "production"
 
+[context.branch-deploy]
+command = "yarn install && yarn run build-next"
+
 [[headers]]
 for = "/*.jpg"
 
