Randomly generate a new gag for each page

--- a/data/gags.yml
+++ b/data/gags.yml
@@ -1,4 +1,7 @@
 lines:
-  - Has anyone seen my keys?
+  - Has anyone seen my keys? I dropped them in here somewhere...
   - My bluetooth is disabled but I only have bluetooth devices. How do I turn it back on?!
   - Is good software a myth? Perhaps we'll never know.
+  - The IETF announces BNS - Baby Name System
+  - If text is sublime already, how can there be a sublime text 2?
+  - Why is it called venture capital if you can just apply for it without walking anywhere?
