--- a/data/gags.yml
+++ b/data/gags.yml
@@ -1,7 +1,13 @@
 lines:
-  - Has anyone seen my keys? I dropped them in here somewhere...
-  - My bluetooth is disabled but I only have bluetooth devices. How do I turn it back on?!
-  - Is good software a myth? Perhaps we'll never know.
-  - The IETF announces BNS - Baby Name System
-  - If text is sublime already, how can there be a sublime text 2?
-  - Why is it called venture capital if you can just apply for it without walking anywhere?
+- Has anyone seen my keys? I dropped them in here somewhere...
+- My bluetooth is disabled but I only have bluetooth devices. How do I turn it back on?!
+- Is good software a myth? Perhaps we'll never know
+- The IETF announces BNS - Baby Name System
+- If text is sublime already, how can there be a sublime text 2?
+- Why is it called venture capital if you can just apply for it without walking anywhere?
+- What does the Y in YCombinator stand for?
+- The invention of sport was a mistake!
+- Besides Tele, how many other types of vision are there?
+- When are they going to air Who Wants To Be A Crypto Millionaire?
+- What if NASA was the result of a typo in a government memo proposing "Spice exploration"?
+- What does the "work" in network refer to? There's no such thing as a netrelax after all
