--- a/netlify.toml
+++ b/netlify.toml
@@ -57,7 +57,7 @@ Cache-Control = "public, max-age=604800"
 for = "/*"
 
 [headers.values]
-X-Frame-Options = "DENY"
+X-Frame-Options = "SAMEORIGIN"
 X-XSS-Protection = "1; mode=block"
 X-Content-Type-Options = "nosniff"
 Referrer-Policy = "no-referrer"
