--- a/data/books.yml
+++ b/data/books.yml
@@ -3,12 +3,20 @@ library:
   - list: Currently Reading
     priority: 1
     books:
-    - title: Crossing the Chasm
+    - title: Crossing the Chasm, 3rd Edition
       author: Geoffrey A. Moore
       cover: https://covers.openlibrary.org/b/id/8982180-L.jpg
       link: https://openlibrary.org/works/OL20320657W/Crossing_the_Chasm_3rd_Edition
       date_finished: N/A
       rating: N/A
+      progress: 24
+    - title: Street Fighters
+      author: Kate Kelly
+      cover: https://covers.openlibrary.org/b/id/6300727-L.jpg
+      link: https://openlibrary.org/works/OL14990223W/Street_Fighters
+      date_finished: N/A
+      rating: N/A
+      progress: 9
 
   - list: Finished
     priority: 2
@@ -17,7 +25,7 @@ library:
       author: Ian D. Gow
       cover: https://covers.openlibrary.org/b/id/11194303-L.jpg
       link: https://openlibrary.org/books/OL30597006M/The_Big_Four
-      date_finished: 2021-05-29
+      date_finished: 2021-05-30
       rating: 4
     - title: Little Rice
       author: Clay Shirky
