--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "yarn install && yarn run build"
+command = "yarn run generate-fancy-links && yarn install && yarn run build"
 
 [build.environment]
 HUGO_VERSION = "0.83.1"
@@ -9,7 +9,7 @@ HUGO_VERSION = "0.83.1"
 HUGO_ENV = "production"
 
 [context.branch-deploy]
-command = "python3 scripts/generate-fancylinks.py && yarn install && yarn run build-next"
+command = "yarn run generate-fancy-links && yarn install && yarn run build-next"
 
 [[headers]]
 for = "/*.jpg"
