--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@ command = "yarn run generate-fancy-links && yarn install && yarn run build"
 
 [build.environment]
 HUGO_VERSION = "0.83.1"
+PYTHON_VERSION = "3.9.5"
 
 [context.production.environment]
 HUGO_ENV = "production"
