--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "hugo server --disableFastRender --buildDrafts --buildFuture",
     "build": "NODE_ENV=production hugo --gc --buildFuture",
     "build-next": "NODE_ENV=production hugo --gc --buildDrafts --buildFuture",
-    "generate-fancy-links": "python3 -m pip install -r scripts/requirements.txt && python3 scripts/generate-fancylinks.py"
+    "generate-fancy-links": "pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
   },
   "devDependencies": {},
   "dependencies": {
