Attempt to fix version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         hugo-version: '0.83.1'
 
-    - uses: bolares/actions-yarn@master
+    - uses: Bolares/actions-yarn@2.3.0
       with:
         cmd: generate-fancy-links
 
