--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
     - run: yarn run generate-fancy-links
     - run: yarn install
-    - run: build
+    - run: yarn build
 
     - name: Publish
       uses: netlify/actions/build@master
