--- a/data/metaoia.yml
+++ b/data/metaoia.yml
@@ -100,9 +100,111 @@ entries:
     Subject: Phone calls to heads of state  
     DeniedUnder: 6(a)
 
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to F-16 Lease Arrangement ERD Papers 14 March 2000
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to information held by the Department of the Prime Minister and Cabinet concerning extending NZ Iraq deployment
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request about the Government's desire for greater transparency regarding military deployments
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request about the status of information that was subject to previous Official Information Act requests (that's me!)
+    DeniedUnder: 6
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to discussions referred to in published Aide Memoire about possible NZDF contribution to counter-ISIS coalition
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request for a Government report into the hijacking of Air New Zealand TE24
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to telecommunication issues associated with Huawei between 1 October 2017 and 30 September 2018
+    DeniedUnder: 6(a), 6(b)(i)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to the Cyber Credentials Scheme
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to discussions referred to in published Aide Memoire about possible NZDF contribution to counter-ISIS coalition (follow up request)
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request for briefings provided to Attorney-General in relation to the Five Country Ministerial and Quintet Meeting
+    DeniedUnder: 6(a), 6(b)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request for information relating to white nationalism, and meetings with the Islamic Women's Council
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to DPMC policy advice and the Policy Project
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request on various matters relating to national security and counter-terrorism
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to advice provided to the Prime Minister on camps in Xinjiang, China
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request for the number of National Assessment Bureau Employees, the number who speak Mandarin and Cantonese and the number with a security clearance
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2018 - 2019
+    Subject: Request relating to the July inter-agency cyber meeting
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request relating to Moonshot CVE
+    DeniedUnder: 6(a), 6(b)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request relating to Y2K
+    DeniedUnder: 6(a), 6(b)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request for information relating to the Whakaari/White Island eruption on 9 December 2019 and the subsequent recovery operation
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request regarding Zoom conference clearance
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request for titles and dates of formal reports relating to COVID-19
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request relating to women's involvement in Radical-extremist groups
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request relating to Asian organised crime
+    DeniedUnder: 6(a)
+
+  - RequestDate: 2019 - 2020
+    Subject: Request relating to the Trans-Tasman bubble
+    DeniedUnder: 6(a)
+
 Sources:
   - SourceURL: https://fyi.org.nz/request/4578-foia-sections-s6-a-and-s-6-b-i#incoming-14960
     SourceTitle: FOIA Sections S6 (a) and S (6) b (i) - fyi.govt.nz
 
   - SourceURL: https://fyi.org.nz/request/6763-withheld-rejected-oia-filings#incoming-22439
     SourceTitle: Withheld / Rejected OIA Filings - fyi.govt.nz
+
+  - SourceURL: https://fyi.org.nz/request/11587-foia-sections-s6-a-and-s-6-b-i-oct-2018-oct-2019
+    SourceTitle: FOIA Sections S6(a) and S(6)b(i) - Oct 2018 - Oct 2019
+
+  - SourceURL: https://fyi.org.nz/request/13527-foia-sections-s6-a-and-s-6-b-i-nov-2019-aug-2020
+    SourceTitle: FOIA Sections S6(a) and S(6)b(i) - Nov 2019 - Aug 2020
