--- a/config.toml
+++ b/config.toml
@@ -9,5 +9,8 @@ title = "utf9k"
   description = "Is this thing even on? I just put some text here to test out link previews. There's real site content though, I swear!"
   title = "utf9k"
 
+[outputs]
+  home = ["HTML", "RSS"]
+
 [markup.goldmark.renderer]
   unsafe = true
