Set robots.txt through layouts

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "https://utf9k.net/"
 languageCode = "en-us"
 title = "utf9k"
+enableRobotsTxt = true
 
 [taxonomies]
   category = "categories"
