--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "hugo server --disableFastRender --buildDrafts --buildFuture",
-    "build": "NODE_ENV=production hugo --gc --buildFuture",
-    "build-next": "NODE_ENV=production hugo --gc --buildDrafts --buildFuture",
+    "build": "hugo --gc --buildFuture --environment production",
+    "build-next": "hugo --gc --buildDrafts --buildFuture",
     "generate-fancy-links": "pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
   },
   "devDependencies": {},
