--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
   "scripts": {
-    "start": "hugo server --disableFastRender --buildDrafts --buildFuture",
-    "build": "hugo --gc --buildFuture --environment production",
-    "build-next": "hugo --gc --buildDrafts --buildFuture",
+    "start": "hugo server --disableFastRender --buildDrafts --buildFuture --enableGitInfo",
+    "build": "hugo --gc --buildDrafts --buildFuture --environment production --enableGitInfo",
+    "build-next": "hugo --gc --buildDrafts --buildFuture --enableGitInfo",
     "generate-fancy-links": "pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
   },
   "devDependencies": {},
