--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "hugo server --disableFastRender --buildDrafts --buildFuture --enableGitInfo",
     "build": "hugo --gc --buildDrafts --buildFuture --environment production --enableGitInfo",
-    "generate-fancy-links": "pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
+    "generate-fancy-links": "pip install -U pip && pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
   },
   "devDependencies": {},
   "dependencies": {
