--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://utf9k.net/"
 languageCode = "en-us"
 title = "utf9k"
 enableRobotsTxt = true
+enableGitInfo = true
 
 [taxonomies]
   category = "categories"
