--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Marcus Crane <marcus@utf9k.net>",
   "license": "MIT",
   "scripts": {
-    "start": "hugo server --disableFastRender --buildDrafts --buildFuture --enableGitInfo",
-    "build": "hugo --gc --buildDrafts --buildFuture --environment production --enableGitInfo",
+    "start": "hugo server --disableFastRender",
+    "build": "hugo --gc",
     "generate-fancy-links": "pip install -U pip && pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
   },
   "devDependencies": {},
