--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
+    "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
     "node-fetch": "^2.6.1",
