Override default nginx log

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,23 @@
-server {
-  listen 8080;
+http {
+  include conf/mime.types;
+  index   index.html index.html;
 
-  server_name _;
+  default_type application/octet-stream;
 
-  root /var/www/utf9k;
+  access_log logs/access.log main;
+  sendfile on;
 
-  location / {
-    index index.html;
-    try_files $uri $uri/ $uri.html 404.html =404;
+  server {
+    listen 8080;
+
+    server_name _;
+    access_log  logs/utf9k.access.log main;
+
+    root /var/www/utf9k;
+
+    location / {
+      index index.html;
+      try_files $uri $uri/ $uri.html 404.html =404;
+    }
   }
 }
-
