Add X-Frame-Options header as a test

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,8 @@ http {
 
     root /var/www/utf9k;
 
+    add_header X-Frame-Options SAMEORIGIN;
+
     location / {
       index index.html;
       try_files $uri $uri/ $uri.html 404.html =404;
