--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,11 @@ http {
 
     root /var/www/utf9k;
 
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://api.mapbox.com; img-src data: blob: *; media-src data: *; script-src 'self' https://api.mapbox.com; connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://*.tiles.mapbox.com https://gunslinger.utf9k.net ; worker-src 'self' blob: ; script-src-elem 'self' https://unpkg.com/netlify-cms@%5E2.0.0/dist/netlify-cms.js https://api.mapbox.com ; frame-src 'self' https://www.youtube.com ; child-src 'self' blob: ;";
     add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options nosniff;
+    add_header Referrer-Policy no-referrer;
 
     location / {
       index index.html;
