--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,10 @@ http {
       try_files $uri $uri/ $uri.html 404.html =404;
     }
 
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
+      expires 7d;
+    }
+
     error_page 404 /404.html;
     # TODO: Create a proper 500 page
     error_page 500 502 503 504 /404.html;
