--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -9,9 +9,7 @@ http {
   include      mime.types;
   default_type application/octet-stream;
 
-  log_format   main '$remote_addr - $remote_user [$time_local]  $status '
-    '"$request" $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
+  log_format   main '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
 
   access_log /var/log/nginx/access.log main;
   sendfile on;
@@ -40,6 +38,10 @@ http {
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
       expires 7d;
+    }
+
+    location /metrics {
+      proxy_pass http://localhost:9091/metrics;
     }
 
     error_page 404 /404.html;
