--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -33,7 +33,7 @@ http {
 
     location / {
       index index.html;
-      try_files $uri $uri/ $uri.html 404.html =404;
+      try_files $request_uri $request_uri/ $request_uri.html 404.html =404;
     }
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
