--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -22,6 +22,9 @@ http {
     access_log  /var/log/nginx/utf9k.access.log main;
 
     root /var/www/utf9k;
+    
+    port_in_redirect off;
+    absolute_redirect off;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://api.mapbox.com; img-src data: blob: *; media-src data: *; script-src 'self' https://api.mapbox.com; connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://*.tiles.mapbox.com https://gunslinger.utf9k.net ; worker-src 'self' blob: ; script-src-elem 'self' https://unpkg.com/netlify-cms@%5E2.0.0/dist/netlify-cms.js https://api.mapbox.com ; frame-src 'self' https://www.youtube.com ; child-src 'self' blob: ;" always;
