--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -36,7 +36,7 @@ http {
 
     location / {
       index index.html;
-      try_files $request_uri $request_uri/ 404.html =404;
+      try_files $uri $uri/ 404.html =404;
     }
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
