--- a/.github/workflows/scheduled_tasks.yml
+++ b/.github/workflows/scheduled_tasks.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           github-token: ${{ secrets.GH_TOKEN }}
           todoist-token: ${{ secrets.TODOIST_TOKEN }}
-          query: archived:false sort:updated-desc assignee:<insert your Github username> updated:>2020-06-01 -label:backlog
+          query: archived:false sort:updated-desc assignee:marcus-crane updated:>2020-06-01
           sync-file-name: ./sync.json
       
       - name: Deploy
