Add two more gags

--- a/data/gags.yml
+++ b/data/gags.yml
@@ -21,4 +21,5 @@ lines:
 - Budgeting is hard. You should try to save a little more for that rainy day!
 - I only ever see baths in hotels. What if they end up becoming extinct?!
 - An internet connected sandwich maker wouldn't be so bad, would it?
-
+- Someone who is good at the economy please help me plan my startup runway
+- :wq!
