--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,5 @@
 name: Deploy via fly.io
-on:
-  push:
-    paths:
-      - '!.github'
-      - '!README.md'
-      - '*'
+on: [push]
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 jobs:
