Add attempt at https upgrade

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -22,6 +22,10 @@ http {
     access_log  /var/log/nginx/utf9k.access.log main;
 
     root /var/www/utf9k;
+
+    if ($scheme = http) {
+      return 301 https://$server_name$request_uri;
+    }
     
     port_in_redirect off;
     absolute_redirect off;
