--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -24,7 +24,7 @@ http {
     root /var/www/utf9k;
 
     if ($scheme = http) {
-      return 301 https://$server_name$request_uri;
+      return 301 https://$host$request_uri;
     }
     
     port_in_redirect off;
