Add nginx_debug route

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -47,6 +47,11 @@ http {
       proxy_pass http://localhost:9091/metrics;
     }
 
+    location /nginx_debug {
+      default_type application/json;
+      return 200 '{"ssl_scheme": "$ssl_scheme", "server_name": "$server_name", "host": "$host"}';
+    }
+
     error_page 404 /404.html;
     # TODO: Create a proper 500 page
     error_page 500 502 503 504 /404.html;
