--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -49,7 +49,7 @@ http {
 
     location /nginx_debug {
       default_type application/json;
-      return 200 '{"scheme": "$scheme", "server_name": "$server_name", "host": "$host"}';
+      return 200 '{"scheme": "$scheme", "server_name": "$server_name", "host": "$host", "ancient browser": "$ancient_browser", "https": "$https", "pid": "$pid", "request": "$request", "server protocol": "$server_protocol", "server port": "$server_port"}';
     }
 
     error_page 404 /404.html;
