Use x-forwarded-proto instead for ssl upgrade

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -26,7 +26,7 @@ http {
     port_in_redirect off;
     absolute_redirect off;
 
-    if ($http_x_forwarded_ssl = "off") {
+    if ($http_x_forwarded_proto = "http") {
       return 301 https://$host$request_uri;
     }
 
@@ -53,7 +53,7 @@ http {
 
     location /nginx_debug {
       default_type application/json;
-      return 200 '{"scheme": "$scheme", "server_name": "$server_name", "host": "$host", "ancient browser": "$ancient_browser", "https": "$https", "pid": "$pid", "request": "$request", "server protocol": "$server_protocol", "server port": "$server_port", "fly forwarded port": "$http_fly_forwarded_port", "fly forwarded region": "$http_fly_forwarded_region", "x-forwarded-ssl": "$http_x_forwarded_ssl", "via": "$http_via"}';
+      return 200 '{"scheme": "$scheme", "server_name": "$server_name", "host": "$host", "ancient browser": "$ancient_browser", "https": "$https", "pid": "$pid", "request": "$request", "server protocol": "$server_protocol", "server port": "$server_port", "fly forwarded port": "$http_fly_forwarded_port", "fly forwarded region": "$http_fly_forwarded_region", "x-forwarded-ssl": "$http_x_forwarded_ssl", "via": "$http_via", "x-forwarded-proto": "$http_x_forwarded_proto"}';
     }
 
     error_page 404 /404.html;
