Ship nginx access logs to Kibana using Vector

--- a/config.toml
+++ b/config.toml
@@ -24,3 +24,14 @@ buildFuture = true
 
 [markup.goldmark.renderer]
   unsafe = true
+
+[privacy]
+  [privacy.twitter]
+    enableDNT = true
+    simple = true
+  [privacy.youtube]
+    privacyEnhanced = true
+
+[services]
+  [services.twitter]
+    disableInlineCSS = true
