--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -9,9 +9,28 @@ http {
   include      mime.types;
   default_type application/octet-stream;
 
-  log_format   main '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
+  log_format json_combined escape=json
+    '{'
+      '"body_bytes_sent":"$body_bytes_sent",'
+      '"bytes_sent":"$bytes_sent",'
+      '"http_fly_forwarded_region":"$http_fly_forwarded_region",'
+      '"http_referrer":"$http_referer",'
+      '"http_user_agent":"$http_user_agent",'
+      '"remote_addr":"$remote_addr",'
+      '"remote_user":"$remote_user",'
+      '"request_length":"$request_length",'
+      '"request_method":"$request_method",'
+      '"request_time":"$request_time",'
+      '"request_uri":"$request_uri",'
+      '"server_port":"$server_port",'
+      '"server_protocol":"$server_protocol",'
+      '"ssl_protocol":"$ssl_protocol",'
+      '"status": "$status",'
+      '"time_local":"$time_local",'
+      '"via":"$http_via"'
+    '}';
 
-  access_log /var/log/nginx/access.log main;
+  access_log /var/log/nginx/access.log json_combined;
   sendfile on;
   keepalive_timeout 65;
 
